# kaldi-native-io-cmake-example

./: CMakeLists.txt  README.md  main.cc
.github/workflows/: test-from-github-cmake.yaml  test-from-github-pip.yaml  test.yaml
